# scrypto-challenges

./: .gitignore  .gitmodules  LICENSE  README.md  package-lock.json  package.json  scrypto new-package [LucaT].txt  webpack.config.js.save
1-exchanges/RaDEX/: Cargo.toml  README.md  script.sh
1-exchanges/RaDEX/raw_transactions/: component_creation.rtm  creating_initial_liquidity_pools.rtm  remove_BTC_USDT_liquidity.rtm  swap_ADA_for_DOGE.rtm  swap_BTC_for_USDT.rtm  swap_BTC_for_USDT_and_add_liquidity.rtm  token_creation.rtm  token_funding.rtm
1-exchanges/RaDEX/src/: lib.rs  liquidity_pool.rs  radex.rs  utils.rs
1-exchanges/RaDEX/transactions/: component_creation.rtm  creating_initial_liquidity_pools.rtm  creating_liquidity_pools.rtm  exchanging_ADA_for_DOGE.rtm  funding_other_accounts.rtm  remove_BTC_USDT_liquidity.rtm  swap_ADA_for_DOGE.rtm  swap_BTC_for_USDT.rtm  swap_BTC_for_USDT_and_add_liquidity.rtm  token_creation.rtm  token_creation_and_funding.rtm  token_funding.rtm
1-exchanges/flexiswap/: Cargo.toml
1-exchanges/flexiswap/src/: authentication.rs  decoder.rs  lib.rs  transporter.rs  voucher.rs
1-exchanges/flexiswap/src/transporter/: mod.rs  transporter.rs  voucher.rs
1-exchanges/flexiswap/tests/: lib.rs
1-exchanges/hareswap/hare/: Cargo.toml
1-exchanges/hareswap/hare/src/: lib.rs  main.rs
2-oracles/: .gitignore  (+2 more)
2-oracles/vrf-oracle-dekentz/: .env  Cargo.toml  README.md  vrf_verify.rev
2-oracles/vrf-oracle-dekentz/src/: lib.rs
2-oracles/vrf-oracle-dekentz/tests/: lib.rs
3-lending/Ground_Finance/Ground_Test/: Cargo.toml  README.md
3-lending/Ground_Finance/Ground_Test/resim-client/: GROUND_ADDRESS.tsx  blacklist  change_compensate_rate  change_credit_scoring_rate  change_fee  change_interest_rates  change_tolerance_threshold  get_test_resources  init  instantiate  manipulate_time  review_installment_credit
3-lending/Ground_Finance/Ground_Test/src/: lib.rs
3-lending/Ground_Finance/Ground_Test/tests/: lib.rs  neuracle_time_gateway.rs
4-portfolio-management-yield-farming/PortfolioDApp/: COLLABORATIVE.md  Cargo.toml  README.md  TRADING.md  acc.sh  comp.sh  portfolio_dapp.sh  pub.sh  test.sh  trading_dapp.sh  updPackage.sh
4-portfolio-management-yield-farming/PortfolioDApp/src/: lending_app.rs  lib.rs  portfolio_app.rs  trading_app.rs  utils.rs
4-portfolio-management-yield-farming/PortfolioDApp/tests/: lib.rs
4-portfolio-management-yield-farming/PortfolioDApp/transactions/: buy_btc_by_Bob.rtm  buy_by_Bob.rtm  buy_by_John.rtm  buy_by_Max.rtm  buy_eth_by_Bob.rtm  buy_leo_by_Bob.rtm  buy_with_trading.rtm  buy_with_trading_eth.rtm  buy_with_trading_leo.rtm  close_all_positions.rtm  close_position.rtm_  create-lending.rtm  create_lending.rtm  create_market.rtm  create_portfolio.rtm  current_price.rtm  current_price_eth.rtm  fund_market.rtm  fund_portfolio_by_Bob.rtm  fund_portfolio_by_John.rtm  fund_portfolio_by_Max.rtm  lend.rtm  portfolio_total_value.rtm  portfolio_value.rtm  positions.rtm  price_btc.rtm  price_eth.rtm  price_leo.rtm  register_for_borrowing.rtm  register_for_lending.rtm  register_with_portfolio.rtm  register_with_portfolio_by_John.rtm  register_with_portfolio_by_Max.rtm  sell_with_trading.rtm  sell_with_trading_eth.rtm  sell_with_trading_leo.rtm  show_positions.rtm  show_positions_by_Bob.rtm  takeback.rtm  withdraw_by_Bob.rtm  (+2 more)
4-portfolio-management-yield-farming/RadHedge/: Cargo.toml  README.md  show_case.sh
4-portfolio-management-yield-farming/RadHedge/src/: investment_pool.rs  lib.rs  test_environment.rs
4-portfolio-management-yield-farming/RadHedge/test_transactions/: create_investment_pool.rtm  create_test_environment.rtm  fund_pool.rtm
5-DAO/ArchDAO/: Cargo.toml  README.md
5-DAO/ArchDAO/rtm/archdao/: add_proposal.rtm  add_vote.rtm  approve_proposal.rtm  deposit.rtm  fund_approved_project.rtm  instantiate_archdao.rtm  list_proposal.rtm  read_admin_badge_address.rtm  read_approvals_update_interval_epochs.rtm  read_archdao_token.rtm  read_deposit_fee_bps.rtm  read_fees_stored.rtm  read_free_funds.rtm  read_free_funds_target_percent.rtm  read_last_update_epoch.rtm  read_minimum_deposit.rtm  read_proposal_control_badge_address.rtm  read_proposal_for_approval.rtm  read_total_votes.rtm  read_vote_mint_badge_address.rtm  read_vote_token_address.rtm  read_withdraw_fee_bps.rtm  register.rtm  set_minimum_deposit.rtm  value_of_vote_tokens.rtm  vote_proposal.rtm  withdraw.rtm  withdraw_protocol_fees.rtm
5-DAO/ArchDAO/rtm/mock/: instantiate_proposal_mock.rtm
5-DAO/ArchDAO/src/: archdao.rs  archproposal.rs  archproposalmock.rs  lib.rs
5-DAO/ArchDAO/tests/: lib.rs
5-DAO/dao-kit/scrypto/: Cargo.toml  README.md  rustfmt.toml
5-DAO/dao-kit/scrypto/src/: code_execution_system.rs  component_address_repo.rs  demo_do_good_dao.rs  demo_flex_dao.rs  lib.rs  membership_system.rs  simple_dao_system.rs  utils.rs  voting_system.rs
5-DAO/dao-kit/scrypto/tests/: common.rs  component_address_repo_test.rs  demo_do_good_dao_test.rs  demo_flex_dao_test.rs
7-defi-devpost/mojitoswap/: Cargo.toml  README.md
7-defi-devpost/mojitoswap/src/: btree_set_ext.rs  lib.rs  pool.rs  pool_math.rs  tick_math.rs
7-defi-devpost/mojitoswap/tests/: pool.rs
7-defi-devpost/stoichiometric/backend/: Cargo.toml  README.md  package.json  tsconfig.json
7-defi-devpost/stoichiometric/scrypto/dao/: Cargo.toml
7-defi-devpost/stoichiometric/scrypto/tests/: Cargo.toml
8-yield-derivatives/Tokenizer/scrypto/: .gitignore  Cargo.toml  local_deploy.sh  supply.sh  swap.sh  swap_case1.sh  tokenize.sh
8-yield-derivatives/Tokenizer/scrypto/rtm/: add_token.rtm  claim_yield.rtm  extend_lending_pool.rtm  fund.rtm  instantiate_tokenizer.rtm  redeem.rtm  redeem_from_pt.rtm  register.rtm  set_extra.rtm  set_reward.rtm  supply_high.rtm  takes_back.rtm  tokenize_yield.rtm  unregister.rtm
8-yield-derivatives/Tokenizer/scrypto/src/: lib.rs  tokenizer.rs  utils.rs
8-yield-derivatives/yield-tokenizer/blueprint/: Cargo.toml  rustfmt.toml
Scrypto/: Cargo.toml  is-claimed.rtm
Scrypto/src/: test.rs
smaller-challenges/token-sale/automated-token-sale-checker/: Cargo.toml
(+3154 files in other folders)
