[package]
name = "RaDEX"
version = "0.2.0"
edition = "2021"

[dependencies]
sbor = { path = "/Users/omarabdulla/radix/radixdlt-scrypto/sbor" }
scrypto = { path = "/Users/omarabdulla/radix/radixdlt-scrypto/scrypto" }

[dev-dependencies]
radix-engine = { path = "/Users/omarabdulla/radix/radixdlt-scrypto/radix-engine" }

[profile.release]
opt-level = 's'     # Optimize for size.
lto = true          # Enable Link Time Optimization.
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic.

[lib]
crate-type = ["cdylib", "lib"]
