[package]
name = "vrf-oracle-dekentz"
version = "0.1.0"
edition = "2021"
authors = ["dekentz"]

[dependencies]
sbor = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v0.4.0" }
scrypto = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v0.4.0" }
p256 = { git = "https://github.com/radixdlt/elliptic-curves", branch = "alloc", default-features = false, features = ["hash2curve", "arithmetic"] }
thiserror = "1.0.31"
sha2 = "^0.10"
hex = "0.4.3"

[dev-dependencies]
radix-engine = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v0.4.0" }

[profile.release]
opt-level = 's'     # Optimize for size.
lto = true          # Enable Link Time Optimization.
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic.
strip = "debuginfo" # Strip debug info.

[lib]
crate-type = ["cdylib", "lib"]
