[package]
name = "mojitoswap"
version = "0.1.0"
edition = "2021"

[dependencies]
sbor = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "db963f1"}
scrypto = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "db963f1"}
lazy_static = "1.4.0"

[dev-dependencies]
radix-engine = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "db963f1"}
transaction = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "db963f1"}
scrypto-unit = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "db963f1"}
regex = "1"

[profile.release]
opt-level = 's'     # Optimize for size.
lto = true          # Enable Link Time Optimization.
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic.
strip = "debuginfo" # Strip debug info.
overflow-checks = true # Panic in the case of an overflow.

[lib]
crate-type = ["cdylib", "lib"]