[package]
name = "ground_test"
version = "0.1.0"
edition = "2021"

[dependencies]
sbor = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v0.4.1" }
scrypto = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v0.4.1" }
neuracle =  { git = "https://github.com/unghuuduc/NeuRacle.git" }
ground_id = { git = "https://github.com/unghuuduc/GroundPackages.git" }
ground_business = { git = "https://github.com/unghuuduc/GroundPackages.git" }
ground_finance = { path = "../Ground_Finance" }

[dev-dependencies]
radix-engine = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v0.4.1" }
scrypto-unit = { git = "https://github.com/unghuuduc/scrypto-unit.git" }
reqwest = "0.11.11"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.82"

[profile.release]
opt-level = 's'     # Optimize for size.
lto = true          # Enable Link Time Optimization.
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic.
strip = "debuginfo" # Strip debug info.

[lib]
crate-type = ["cdylib", "lib"]
