[package]
name = "stoichiometric-decoder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
radix-engine-interface = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag="v0.8.0" }
scrypto = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v0.8.0" }
sbor = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v0.8.0" }
hex = "0.4.3"