[package]
edition = "2021"
name = "yield-tokenizer"
resolver = "2"
version = "1.0.0"

[dependencies]
sbor = {git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.1.1"}
scrypto = {git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.1.1"}

[dev-dependencies]
radix-engine = {git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.1.1"}
radix-engine-interface = {git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.1.1"}
scrypto-test = {git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.1.1"}
scrypto-unit = {git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.1.1"}
transaction = {git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.1.1"}
yield-tokenizer = {path = ".", features = ["test"]}

[profile.release]
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
lto = true # Enable Link Time Optimization.
opt-level = 'z' # Optimize for size.
overflow-checks = true # Panic in the case of an overflow.
panic = 'abort' # Abort on panic.
strip = true # Strip the symbols.

[features]
default = []
test = []

[lib]
crate-type = ["cdylib", "lib"]

[workspace]
# Set the package crate as its own empty workspace, to hide it from any potential ancestor workspace
# Remove this [workspace] section if you intend the package to be part of a Cargo workspace
